--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,19 +1,51 @@
 body{
-    width: 595px;
-    height: 842pc;
     background: var(--black, #262626);
+    display: flex;
 }
 
 .form{
-    width: 544px;
-    height: 776px;
+    
+    margin-top: 1px;
+    margin-left: 1px;
+    margin-bottom: 1px;
+    margin-right: 1px;
+    width: 100%;
+    height: 100%;
+    background: #262626;
+    position: relative;
     border-radius: 13px;
-    background: var(--black, #262626);
-    flex-shrink: 0;
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.17);
+    
+    
+}
+
+.border{
+    background: linear-gradient( rgba(255, 255, 255, 0.404), rgba(0, 0, 0, 0.096));
+    
+    width: 100%;
+    height: 50rem;
+
+    display: flex;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    border-radius: 13px;
+
+    box-shadow: 0px 5px 9px 0px rgba(0, 0, 0, 0.226);
+    
 }
 
 #path{
-    border-radius: 8px;
-    border: 2pc solid var(--blue-cyan, #72A1E5);
+    border-radius: 5px;
+    background: var(--transparent, rgba(0, 0, 0, 0));
+    color:white;
+    position: absolute;
+    
+    width: 90%;
+    height: 25px;
+    
+    border: 2px solid var(--blue-cyan, #72A1E5);
+
+    font-size: medium;
+    
 }
+
+#
