implementacion de funcion reload en Config. implementacion de editor de filtros, implementacion de borrado de filtro y correcion de bugs,

--- a/ui/source/icons.qrc
+++ b/ui/source/icons.qrc
@@ -3,6 +3,7 @@
     <file>logo.png</file>
   </qresource>
   <qresource prefix="icons">
+    <file>back.svg</file>
     <file>error.svg</file>
     <file>success.svg</file>
     <file>gear.svg</file>
